--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
 }
 
 body {
-  background-image:url(./assets/lekoarts-DnpEpPGN66s-unsplash.jpg);
+  background-image:url(./assets/fondo.jpg);
   color: var(--color-primary);
   height: 100vh;
   padding: 0.5rem 2rem;
